# agentk

./: .env.example  .gitignore  CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  agentk  config.sh.example  install.sh  package.json  pyproject.toml  uninstall.sh
Formula/: agentk.rb
lib/: core.sh  spawn.sh  ui.sh  visual.sh
modes/dev/: engineer.md  tester.md
modes/ml/: data-engineer.md  evaluator.md  researcher.md
python/: .env.example  README.md  pyproject.toml
python/agentk/: __init__.py  cli.py
python/agentk/scripts/: agentk
python/agentk/scripts/lib/: core.sh  ipc.sh  ui.sh
python/agentk/scripts/modes/dev/: orchestrator.md  security.md
python/agentk/scripts/modes/ml/: ml-engineer.md  orchestrator.md
python/agentk/scripts/modes/shared/: scout.md
src/: cli.tsx
src/components/: AgentPanel.tsx  AgentStatus.tsx  App.tsx  Banner.tsx  Box.tsx  ChatMessage.tsx  Confirmation.tsx  Input.tsx  QuestionWizard.tsx  StatusBar.tsx  ThinkingIndicator.tsx  WelcomeBox.tsx  index.ts
src/lib/: claude.ts  council.ts
src/themes/: retro.ts
