[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentk8"
version = "1.0.2"
description = "Multi-Agent Claude Code Terminal Suite - Orchestrate multiple Claude agents for software development and ML research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya Katiyar", email = "aditya@example.com"}
]
keywords = [
    "claude",
    "claude-code",
    "ai",
    "agents",
    "multi-agent",
    "llm",
    "cli",
    "terminal",
    "developer-tools",
    "ml",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/de5truct0/agentk"
Documentation = "https://github.com/de5truct0/agentk#readme"
Repository = "https://github.com/de5truct0/agentk.git"
Issues = "https://github.com/de5truct0/agentk/issues"

[project.scripts]
agentk = "agentk.cli:main"

[tool.setuptools]
packages = ["agentk"]
include-package-data = true

[tool.setuptools.package-data]
agentk = [
    "scripts/*",
    "scripts/lib/*",
    "scripts/modes/**/*"
]
